Fix hr color in opera when thickness is more than 1px

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -128,6 +128,7 @@ H1 A, H2 A, H3 A, H4 A, H5 A, H6 A {
  * -------------------------------------------------------------------------------------------------
  */
 HR {
+	background: #CCC;
 	border-top-color: #CCC
 }
 
